--- a/ProjetREV.html
+++ b/ProjetREV.html
@@ -23,9 +23,7 @@
 
 		<!-- Les modèles à récupérer-->
 		<a-assets>
-				<!-- Table -->
-				<a-asset-item id="table-obj" src="modeles/chair_table/table.obj"></a-asset-item>
-				<a-asset-item id="table-mtl" src="modeles/chair_table/table.mtl"></a-asset-item>
+				
 				<!-- Chaise -->
 				<a-asset-item id="chair-obj" src="modeles/vieille_chaise/chair_granmother.obj"></a-asset-item>
 				<a-asset-item id="chair-mtl" src="modeles/vieille_chaise/chair_granmother.mtl"></a-asset-item>
@@ -54,8 +52,8 @@
 				<a-asset-item id="penguin-mtl" src="modeles/penguin/penguin.mtl"> </a-asset-item>
 
 				<!--mixin-->
-				<a-mixin id="wood" material="side: double; src: url(textures/wood.jpg)"></a-mixin>
-				<a-mixin id="planche" geometry="primitive:box; height:0.2; width:6; depth:4"></a-mixin>
+				<a-mixin id="wood" material="side: double; src: url(textures/wood.jpg)"></a-mixin> 
+				<a-mixin id="planche" geometry="primitive:sphere; height:0.2; width:4; depth:2"></a-mixin>
 				<a-mixin id="pied_table" geometry="primitive:box; height:1.1; width:0.4; depth:0.5"></a-mixin>
 				<a-mixin id="cadre-porte" geometry="primitive:box; height:0.2; width:4; depth:0.2" rotation="0 90 90" material="src: url(textures/boiserie.jpg)"></a-mixin>
 
@@ -71,19 +69,19 @@
 		</a-entity>
 
 		<!-- Le premier mur -->
-		<a-entity geometry="primitive: plane; width: 20; height: 7" position="0 3.5 -6" material="side: double; src: url(textures/wall.jpg) ">
+		<a-entity geometry="primitive: plane; width: 20; height: 7" position="0 3.5 -6" material="side: double; src: url(textures/boiserieCastle.jpg); repeat: 6 1 ">
 		</a-entity>
 
 		<!-- Le deuxième mur -->
-		<a-entity geometry="primitive: plane; width: 12; height: 7" position="10 3.5 0" rotation="0 90 0" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 12; height: 7" position="10 3.5 0" rotation="0 90 0" material="side: double; src: url(textures/boiserieCastle.jpg)">
 		</a-entity>
 
 		<!-- Le troisième mur -->
-		<a-entity geometry="primitive: plane; width: 12; height: 7" position="-10 3.5 0" rotation="0 -90 0" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 12; height: 7" position="-10 3.5 0" rotation="0 -90 0" material="side: double; src: url(textures/boiserieCastle.jpg) ; repeat: 4 1">
 		</a-entity>
 
 		<!-- Le quatrième mur -->
-		<a-entity geometry="primitive: plane; width: 20; height: 7" position="0 3.5 6" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 20; height: 7" position="0 3.5 6" material="side: double; src: url(textures/boiserieCastle.jpg); repeat:6 1">
 		</a-entity>
 
 
@@ -142,13 +140,13 @@
 
 		<!-- La fenetre du fond-->
 		<!-- Le cadre-->
-		<a-entity geometry="primitive: plane; width: 4; height: 7" position="9 3.5 -4" rotation="0 90 0" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 4; height: 7" position="9 3.5 -4" rotation="0 90 0" material="side: double; src: url(textures/boiserieCastle.jpg); repeat :2 1" >
 		</a-entity>
 
-		<a-entity geometry="primitive: plane; width: 4; height: 7" position="9 3.5 4" rotation="0 90 0" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 4; height: 7" position="9 3.5 4" rotation="0 90 0" material="side: double; src: url(textures/boiserieCastle.jpg); repeat :2 1">
 		</a-entity>
 
-		<a-entity geometry="primitive: plane; width: 2; height: 4" position="9 6 0" rotation="0 90 90" material="side: double; src: url(textures/wall.jpg)">
+		<a-entity geometry="primitive: plane; width: 2; height: 4" position="9 6 0" rotation="0 90 90" material="side: double; src: url(textures/boiserieCastle.jpg);">
 		</a-entity>
 
 		<!-- Les boiseries-->
@@ -176,26 +174,23 @@
 		</a-entity>
 
 		<!-- Repère de la scène repeat: 100 20 -->
-		<a-sphere radius="0.2"></a-sphere>
+		<!--<a-sphere radius="0.2"></a-sphere>
 		<a-cylinder height="3.0" color="green" radius="0.05" position="0.0 1.5 0.0"></a-cylinder>
 		<a-cylinder height="3.0" color="red" radius="0.05" position="1.5 0.0 0.0" rotation="0 0 -90"></a-cylinder>
 		<a-cylinder height="3.0" color="blue" radius="0.05" position="0.0 0.0 1.5" rotation="90 0 0"></a-cylinder>
 
 		<a-sphere radius="0.2" color="red" position="4 0 0"></a-sphere>
 		<a-sphere radius="0.2" color="green" position="0 4 0"></a-sphere>
-		<a-sphere radius="0.2" color="blue" position="0 0 4"></a-sphere>
+		<a-sphere radius="0.2" color="blue" position="0 0 4"></a-sphere>-->
 
 		<!-- table -->
 		<a-entity id="table">
-			<a-entity mixin="wood planche" position="0 1.1 0">
+			<a-entity mixin="wood planche" position="0 1.1 0"  scale="2 0.1 2">
 			</a-entity>
 
 			<!--pied de la table-->
-
-			<a-entity mixin="wood pied_table" position="-2.5 0.5 1.5"></a-entity>
-			<a-entity mixin="wood pied_table" position="2.5 0.5 1.5"></a-entity>
-			<a-entity mixin="wood pied_table" position="-2.5 0.5 -1.5"></a-entity>
-			<a-entity mixin="wood pied_table" position="2.5 0.5 -1.5"></a-entity>
+			<a-entity mixin="wood pied_table" position=" 0 0.5 0"></a-entity>
+	
 
 		</a-entity>
 
@@ -277,11 +272,29 @@
 			rotation = "-90 0 0"> </a-obj-model>		
 
 			<!--Sphere translucide pour déplacement-->
-		<a-sphere id="sphere-dir-1" radius="1" color="white" opacity="0.7" position="6 2 3"></a-sphere>
-		<a-sphere id="sphere-dir-4" radius="1" color="white" opacity="0.7" position="-6 2 3"></a-sphere>
-		<a-sphere id="sphere-dir-3" radius="1" color="white" opacity="0.7" position="-6 2 -3"></a-sphere>
-		<a-sphere id="sphere-dir-2" radius="1" color="white" opacity="0.7" position="6 2 -3"></a-sphere>
+			<!-- Position tableau --> 
+		<a-sphere id="sphereMonsieurPomme" radius="0.5" color="white" opacity="0.7" position="7 2 -4"></a-sphere>
+		<a-sphere id="sphereLaitierePipe" radius="0.5" color="white" opacity="0.7" position="6 2 5"></a-sphere>
+
+		<a-sphere id="sphereJeuneFillePerle" radius="0.5" color="white" opacity="0.7" position="2 2 -4.5"></a-sphere>
+		<a-sphere id="sphereBobEponge" radius="0.5" color="white" opacity="0.7" position="-2.5 2 4.5"></a-sphere>
+
+		<!--<a-sphere id="sphere-dir-5" radius="0.5" color="white" opacity="0.7" position="5.5 2 5.5"></a-sphere>-->
+		<a-sphere id="sphereBretagne" radius="0.5" color="white" opacity="0.7" position="-9.5 2 0"></a-sphere>
+
+		<!-- Position cheminée --> 
+		<a-sphere id="sphereCheminee" radius="0.8" color="white" opacity="0.7" position="-1.4 2 -4"></a-sphere>
+
+		<!-- Position fenetre -->
+		<a-sphere id="sphereFenetre" radius="0.5" color="white" opacity="0.7" position="9 2 0"></a-sphere>
+
+		<!-- Position accueil -->
+		<a-sphere id="sphereAccueil" radius="0.5" color="white" opacity="0.7" position="2.5 2 0"></a-sphere>
 		
+
+
+
+   
 	</a-scene>
 
 	<script src="scripts/moveGuide.js"> </script> 
